--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
           </div>
           <button class="body__message-received-btn gradient__color">
             <i class="fa-regular fa-circle"></i>
-            <p>30 minute walk</p>
+            <p id="walk">30 minute walk</p>
             <p class="price">$29</p>
           </button>
           <button class="body__message-received-btn gradient__color">
             <i class="fa-regular fa-circle"></i>
-            <p>1 hour walk</p>
+            <p id="walk">1 hour walk</p>
             <p class="price">$49</p>
           </button>
           <form>
