--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <main>
       <section class="mobile">
         <header>
-          <div class="mobile__notch"></div>
+          <div class="mobile_notch"></div>
           <div class="bottom">
             <div class="header-left">
               <i class="fa-solid fa-chevron-left"></i>
               <figure>
-                <div class="header__avatar">
+                <div class="header_avatar">
                   <img
                     src="avatar.jpg"
                     alt="headshot of Samuel Green"
